tests/Spire.Analyzers.Tests/SPIRE002/cases/Detect_EmptyBody_Struct.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [MustBeInit] is applied to a plain struct with an empty body.
[MustBeInit] //~ ERROR
public struct EmptyStruct { }
